[package]
name = "test_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serialport = "4.2.0"
crc32fast = "1.3.2"
log = "0.4.17"
simple_logger = "2.2.0"
sysinfo = "0.25.1"
termios = "0.3.3"
